# WrapperForELSDc

./: README.md
ELSDc/: example  example.cpp
ELSDc/mycode/: demo.cpp  demo.pgm  elsdc.hpp  opencv.pgm
ELSDc/pybind_examples/example1/: ex.py  example.cpp
ELSDc/src/: CMakeLists.txt  Makefile  demo.cpp  elsdc  elsdc.c  elsdc.h  elsdc_main.c  elsdc_main.h  labels.pgm  out_ellipse.txt  out_polygon.txt  res.pgm  setup.py  test.py
ELSDc/test/: test.c
